--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,14 +13,13 @@ header {
 
 #logo {
 	display: flex;
-	justify-content: center;
 	background-color: lightgrey;
 	align-items: center;
 	width: 100%
 }
 
 #logo img, h2 {
-	padding: 0.4rem;
+	display: inline;
 }
 
 #logo img {
@@ -28,7 +27,8 @@ header {
 }
 
 #logo h2 {
-	margin-right: 10rem;
+	font-weight: 700;
+	font-size: 1.5rem;
 }
 
 nav {
@@ -39,4 +39,16 @@ nav {
 
 nav li {
 	display: inline;
+}
+
+li a {
+	text-decoration: none;
+	text-transform: uppercase;
+	padding-right: 1rem;
+	color: white;
+	font-weight: 700;
+}
+
+li a:hover {
+	color: lightgrey;
 }
