--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,9 +7,8 @@ body {
 	width: 80%;
 	margin: 0 auto;
 }
-header {
-	
-}
+
+/* HEADER */
 
 #logo {
 	display: flex;
@@ -52,3 +51,27 @@ li a {
 li a:hover {
 	color: lightgrey;
 }
+
+/* BANNER */
+
+h1 {
+	font-weight: 700;
+	font-size: 5rem;
+	text-align: center;
+	padding: 1rem;
+}
+
+/* MAIN */
+
+
+
+
+
+
+
+
+
+
+
+
+
