--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ body {
 
 #logo {
 	display: flex;
-	background-color: lightgrey;
+	background-color: #ECEDED;
 	align-items: center;
 	width: 100%
 }
@@ -31,8 +31,8 @@ body {
 }
 
 nav {
-	background-color: brown;
-	padding: 1rem;
+	background-color: #653C3D;
+	padding: 0.5rem;
 	margin: 0 auto;
 }
 
@@ -44,12 +44,12 @@ li a {
 	text-decoration: none;
 	text-transform: uppercase;
 	padding-right: 1rem;
-	color: white;
+	color: #FFFFFF;
 	font-weight: 700;
 }
 
 li a:hover {
-	color: lightgrey;
+	color: #D3D3D3;
 }
 
 /* BANNER */
@@ -63,9 +63,31 @@ h1 {
 
 /* MAIN */
 
+#title {
+	background-color: #978483;
+	padding: 1rem;
+}
 
+#title h2 {
+	color: #FFFFFF;
+	padding-left: 2rem;
+}
 
+#catalog {
+	display: flex;
+	flex-wrap: wrap
+	padding: 2rem 5rem;
+}
 
+.box {
+	width: 60%;
+	border: 1px solid blue;
+	align-items: baseline;
+  	display: inline-block;
+  	flex-grow: 1;
+  	margin-left: 2rem;
+  	margin-bottom: 2rem;
+}
 
 
 
