--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,6 +87,11 @@ h1 {
 	margin-top: 0.5rem;
 }
 
+.box:hover {
+	background-color: #F5F5F5;
+	padding: 0.5rem;
+}
+
 .box img {
   	width: 100%;
   	height: 70%;
