--- a/resources/css/style_blog.css
+++ b/resources/css/style_blog.css
@@ -138,7 +138,13 @@ h1 {
     border-left: 0.2rem solid #ffe2e2;
 }
 
+#other-posts h2 {
+    color: #ffc7c7;
+    padding-left: 0.75rem;
+}
+
 .post {
+    margin-top: 1rem;
     display: flex;
     align-items: center;
     width: 100%;
