--- a/resources/css/style_about.css
+++ b/resources/css/style_about.css
@@ -2,7 +2,7 @@
 /* color palette: 
    pink: #ffc7c7
    lightpink: #ffe2e2
-   babyblue: #defcfc;
+   babyblue: #defcfc
    white: #f6f6f6
    blue: #a6e3e9 */
 
@@ -22,7 +22,8 @@ body {
     display: flex;
     background-color: #defcfc;
     align-items: center;
-    width: 100%
+    width: 100% padding-top: 0.5rem;
+    padding-bottom: 0.5em;
 }
 
 #logo img,
@@ -101,11 +102,20 @@ footer img {
 }
 
 
-.about, .image {
+.about,
+.image {
     width: 45%;
     margin: 1rem;
 }
 
+.about {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.about p {
+    line-height: 200%
+}
 
 h1 {
     font-weight: 700;
@@ -117,11 +127,3 @@ h1 {
     padding: 0.5rem;
     font-size: 0.75rem;
 }
-
-
-
-
-
-
-
-
