--- a/resources/css/style_contact.css
+++ b/resources/css/style_contact.css
@@ -2,7 +2,7 @@
 /* color palette: 
    pink: #ffc7c7
    lightpink: #ffe2e2
-   babyblue: #defcfc;
+   babyblue: #defcfc
    white: #f6f6f6
    blue: #a6e3e9 */
 
@@ -22,7 +22,8 @@ body {
     display: flex;
     background-color: #defcfc;
     align-items: center;
-    width: 100%
+    width: 100% padding-top: 0.5rem;
+    padding-bottom: 0.5em;
 }
 
 #logo img,
