--- a/resources/css/style_blog.css
+++ b/resources/css/style_blog.css
@@ -22,7 +22,8 @@ body {
     display: flex;
     background-color: #defcfc;
     align-items: center;
-    width: 100% padding-top: 0.5rem;
+    width: 100%;
+    padding-top: 0.5rem;
     padding-bottom: 0.5em;
 }
 
